# indivi_collection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/devector/: CMakeLists.txt  README.md  benchmark_devector.h  benchmark_main.cpp
bench/flat_unordered/: CMakeLists.txt  README.md  benchmark_flat_map.h  benchmark_main.cpp
bench/offset_vector/: CMakeLists.txt  benchmark_main.cpp  benchmark_offset_vector.h
bench/sparque/: CMakeLists.txt  README.md  benchmark_main.cpp  benchmark_sparque.h
docs/flat_unordered/: flat_umap_custom_hash.html  flat_umap_default_hash.html  flat_unordered_llvm17.html  flat_unordered_llvm17_customhash.html  flat_unordered_mingw11.html  flat_unordered_msvc17.html
lib/segmented_tree/: seq.hpp  seq_fwd.hpp
lib/seq_1.1.0/: bits.hpp  tiered_vector.hpp  type_traits.hpp  utils.hpp
src/indivi/: devector.h  flat_umap.h  flat_uset.h  hash.h  offset_vector.h  sparque.h
src/indivi/detail/: flat_utable.h  indivi_utils.h
src/utils/: bump_allocator.h  debug_utils.cpp  debug_utils.h  generators.h  romu_prng.h
test/: CMakeLists.txt  test_offset_vector_main.cpp
test/devector/: CMakeLists.txt  test_devector_main.cpp
test/flat_unordered/: CMakeLists.txt  test_flat_umap_main.cpp  test_flat_uset_main.cpp  test_flat_wmap_main.cpp  test_flat_wset_main.cpp
test/sparque/: CMakeLists.txt  test_sparque_main.cpp
